deployment/overlays/minikube/ingress.yml
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: "lagom-scala-openshift-smoketests-sample-ingress"
spec:
  rules:
    - http:
        paths:
          - path: "/api/hello"
            backend:
              serviceName: "hello-lagom-scala-openshift-smoketests-service"
              servicePort: 9000
          - path: "/proxy/rest-hello"
            backend:
              serviceName: "hello-proxy-lagom-scala-openshift-smoketests-service"
              servicePort: 9000
